# rtc-us-ros-pkg-code

./: README.md
rntl/rtcus_compositions/: CMakeLists.txt  mainpage.dox  manifest.xml
rntl/rtcus_compositions/include/rtcus_compositions/: state_composer.h
rntl/rtcus_compositions/src/: incomplete_dynamic_state_compositions.cpp  points.cpp  poses.cpp
rntl/rtcus_compositions/src/point_clouds/: point_clouds.cpp  point_clouds_2d.cpp  point_clouds_common.cpp  point_vector_compositions.cpp
rntl/rtcus_compositions/src/tests/: state_composer.cpp
rntl/rtcus_dwa/: .cproject  CMakeLists.txt  Doxyfile  mainpage.dox  manifest.xml  plugins.xml
rntl/rtcus_dwa/cfg/: high_clearance.cfg  simple_dwa.cfg
rntl/rtcus_dwa/config/: default_navigation_architecture.yaml  dwa_cspace_trajectory.yaml  dwa_default_config.yaml  simulation_configuration.yaml
rntl/rtcus_dwa/config/clearance_parameters/: default_clearance_for_agile_robot.yaml  default_clearance_motorbike.yaml  mixed_strategy_for_agile_robot.yaml
rntl/rtcus_dwa/include/rtcus_dwa/: action_space.h  collision_distance_methods.h  common.h  cost_strategy_base.h  dwa_command_cost.h  dwa_config.h  dwa_motion_model.h  heading_cost_strategies.h  simple_dwa.h  simple_dwa_default_planner.h  simple_dwa_ros.h
rntl/rtcus_dwa/launch/: action_and_state_monitor.xml  clearance_normalization_values.xml  dwa_demo.launch  dwa_node_default_config.xml  introspection.launch  performance_indicators.xml  robot_shape_dwa_demo.launch
rntl/rtcus_dwa/launch/delayed_navigation_experiment/: delayed_navigation_experiment.launch  dwa_node_config_overloads.yaml  plot_delayed.launch  topics_delay_config.yaml
rntl/rtcus_dwa/msg/: DwaStatus.msg
rntl/rtcus_dwa/scripts/: profile_application.sh  profile_dwa_local_planner.sh  profile_move_base.sh  py_dwa.py
rntl/rtcus_dwa/share/robot_description/: erratic_base.xacro
rntl/rtcus_dwa/src/: action_space.cpp  create_default_dwa_node.cpp  dwa_command_cost.cpp  dwa_config.cpp  dwa_motion_model.cpp  geometrical_distances.cpp  move_base_dwa.cpp  simple_dwa.cpp  simple_dwa_ros.cpp
rntl/rtcus_dwa/src/clearance_strategies/: clearance_cost_strategy_base.cpp  danger_area_clearance_cost_strategy.cpp  (+6 more)
rntl/rtcus_dwa/tests/: dwa_debug_test.test  dwa_demo_test.test
rntl/rtcus_motion_models/: CMakeLists.txt  manifest.xml
rntl/rtcus_motion_models/src/: motion_models.cpp  non_holonomic_trajectory_rollout_2d.cpp  python_binding.cpp
rntl/rtcus_navigation/: CMakeLists.txt  ROADMAP.txt  mainpage.dox  manifest.xml  plugins.xml  rosdoc.yaml
rntl/rtcus_navigation/cfg/: action_buffering.cfg  action_port.cfg  high_noise_odometry_state_port.cfg  joy_goal_port_proportional_mapping.cfg  navigation_architecture.cfg  uncertainty_obstacles_perception_port.cfg
rntl/rtcus_navigation/config/: costmap_perception_port.yaml  default_node_config.yaml  default_state_estimation_config.yaml  high_noise_state_port.yaml  uncertainty_obstacle_decorator.yaml
rntl/rtcus_navigation/launch/: monitor_high_noise_state_port.launch  performance_monitor.xml  ptc_prediction_error.launch  trajectory_smoothness_monitor.launch
rntl/rtcus_navigation/msg/: ControlCommand.msg  Status.msg  StatusPrediction.msg  StatusType.msg
rntl/rtcus_navigation/scripts/: ptc_prediction_error_monitor.py  trajectory_smoothness_monitor.py
rntl/rtcus_navigation/src/: abstract_navigation_node.cpp  action_port.cpp  goal_port.cpp  navigation_node.cpp  navigation_node_component.cpp  reached_goal_predicate.cpp  state_estimation.cpp  state_port.cpp  world_perception.cpp
rntl/rtcus_robot_shapes/: CMakeLists.txt  mainpage.dox  manifest.xml
rntl/rtcus_robot_shapes/cfg/: CircularRobotShape.cfg  PoligonalRobotShape.cfg
rntl/rtcus_robot_shapes/config/: circular_wheelchair.yaml  erratic_robot.yaml  motorbike_shape.yaml  wheelchair.yaml
rntl/rtcus_robot_shapes/src/: circular_robot_shape.cpp  polygonal_robot_shape.cpp  shape_operations.cpp
rntl/rtcus_shared_dwa/: CMakeLists.txt  mainpage.dox  manifest.xml
rntl/rtcus_shared_dwa/cfg/: proportional_joy_teleop.cfg  shared_control.cfg
rntl/rtcus_shared_dwa/config/: shared_dwa_default_config.yaml
rntl/rtcus_shared_dwa/launch/: manual_teleop.launch  shared_dwa_demo.launch
rntl/rtcus_shared_dwa/src/: joy_node.cpp  shared_control_dwa_move_base.cpp  shared_dwa_node_factory.cpp  simulate_user_joystick.cpp  teleop_joy_proportional_to_twist.cpp
rntl/rtcus_trajectory_rollout_local_planner/: .project  CMakeLists.txt  mainpage.dox  manifest.xml
rntl/rtcus_trajectory_rollout_local_planner/config/: base_local_planner_params.yaml
rntl/rtcus_trajectory_rollout_local_planner/launch/: example.launch  example_params.yaml  trajectory_rollout_demo.launch
rntl/rtcus_trajectory_rollout_local_planner/src/: node_factory.cpp  trajectory_rollout_move_base.cpp  trajectory_rollout_ros_local_planner.cpp
rntl/stage_rep/: CMakeLists.txt  Makefile.stage  manifest.xml  stageros_sensors_update_intervals.patch  update_patch_stage_b.sh
rntl/stage_rep/cfg/: robot_config.cfg  simulator_config.cfg
rntl/stage_rep/config/: stage_rep_config.yaml
rntl/stage_rep/include2/: dynamic_reconfigure_stageros.h  stage_node.h
rntl/stage_rep/launch/: stage_rep_node.launch
rntl/stage_rep/msg/: RobotStatus.msg
rntl/stage_rep/scripts/: .cproject  .project
rntl/stage_rep/src/: dynamic_reconfigure_stageros.cpp  improvements.txt  stageros.cpp
rtcus_applications/cyton_driver/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rtcus_cognitive/ros_soar/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rtcus_cognitive/ros_soar/launch/: distributed_node_architecture.xml  erratic_cognitive.launch  erratic_cognitive_gazebo.launch  erratic_cognitive_hokuyo.launch  erratic_hardware.xml  erratic_hardware_hokuyo.xml  erratic_laser_mobile_base.launch
rtcus_cognitive/ros_soar/src/: Range.h  reglas-movimiento-reactivo-simple.soar  reglas-movimiento.soar  soar_test_erratic_hokuyo.cpp  soar_test_gazebo.cpp  soar_test_teclado.cpp  sp-look-for-doors.soar.original  sp-look-for-walls-07-metres.soar  sp-look-for-walls-09-metres.soar  sp-simple-reactive-movement.soar
(+447 files in other folders)
